--- a/To_do_list/styles.css
+++ b/To_do_list/styles.css
@@ -15,7 +15,9 @@ body{
     margin: auto;
 }
 
-
+.background{
+    background-color: white;
+}
 
 input[type="text"]{
     width: 310px;
@@ -43,10 +45,10 @@ a{
 
 input[type="text"]{
     width: 310px;
-    height: 30px;
+    height: 50px;
     outline: 0;
     border: none;
-    font-size: 1.5em;
+    font-size: 16px;
     background: #fff;
     color: #2f4f4f;
 }
@@ -57,13 +59,19 @@ h1{
   }
 
   button{
-    font-size: 1.5em;
+    font-size: 16px;
     color: #53BDFF;
     background-color: #fff;
     outline: 0;
-    border: none;
-  
+    border: none;   
+    float: inherit;   
   }
+
+  button:hover,
+  a:hover{
+    color: yellow;
+  }
+
 
   li{
     border-bottom: 1px solid #53BDFF;
