--- a/To_do_list/styles.css
+++ b/To_do_list/styles.css
@@ -50,7 +50,7 @@ h1{
   button{
     font-size: 16px;
     color: #53BDFF;
-    background: white
+    background: white;
     outline: 0;
     border: none;   
     float: inherit;   
