--- a/01 - To-do-list/list.css
+++ b/01 - To-do-list/list.css
@@ -1,7 +1,7 @@
 @import "https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap";
 
 :root {
-  --black: #100a1c;
+  --black: #24282f;
   --primary: #61ffa8;
   --secondary: #285f41;
   --white: #f0f0f9;
