--- a/02 - Calc/calc.css
+++ b/02 - Calc/calc.css
@@ -1,5 +1,12 @@
 @import "https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap";
 
+:root {
+  --black: #24282f;
+  --primary: #61ffa8;
+  --secondary: #285f41;
+  --white: #f0f0f9;
+}
+
 * {
   font-family: "Roboto", sans-serif;
   margin: 0px;
@@ -14,7 +21,7 @@ body {
   align-items: center;
   height: 100vh;
   font-family: "Roboto", sans-serif;
-  background-color: #22162b;
+  background-color: var(--black);
 }
 
 input {
