--- a/05 - Password generator/pw.css
+++ b/05 - Password generator/pw.css
@@ -1,7 +1,8 @@
 :root {
-  --text-color: #6cacc5;
-  --primary-color: rgb(255, 153, 0);
-  --background-color: #100a1c;
+  --black: #24282f;
+  --primary: #61ffa8;
+  --secondary: #285f41;
+  --white: #f0f0f9;
   --item-shadow: 0 0 10px rgba(0, 0, 0, 0.4), 0 0 4px rgba(0, 0, 0, 0.7);
 }
 
@@ -14,8 +15,8 @@
 body {
   font-size: 14px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  color: var(--primary-color);
-  background-color: var(--background-color);
+  color: var(--primary);
+  background-color: var(--black);
   line-height: 1.6;
 }
 
